Various changes, including: 	- rudimentary keyboard model 	- correct view resizing for keys

--- a/Keyboard/Keyboard.storyboard
+++ b/Keyboard/Keyboard.storyboard
@@ -21,7 +21,7 @@
                                 <rect key="frame" x="0.0" y="182" width="296" height="218"/>
                                 <subviews>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="y5B-Ic-V9i" userLabel="Q" customClass="KeyboardKey" customModule="KeyboardFramework">
-                                        <rect key="frame" x="36" y="89.5" width="40" height="39"/>
+                                        <rect key="frame" x="36" y="89" width="40" height="39"/>
                                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="39" id="RNe-UF-gO4"/>
@@ -33,7 +33,7 @@
                                         </userDefinedRuntimeAttributes>
                                     </view>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="0wO-aU-grg" userLabel="W" customClass="KeyboardKey" customModule="KeyboardFramework">
-                                        <rect key="frame" x="82" y="89.5" width="40" height="39"/>
+                                        <rect key="frame" x="82" y="89" width="40" height="39"/>
                                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                         <userDefinedRuntimeAttributes>
                                             <userDefinedRuntimeAttribute type="string" keyPath="text" value="W"/>
@@ -41,7 +41,7 @@
                                         </userDefinedRuntimeAttributes>
                                     </view>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="gy8-0H-OLy" userLabel="E" customClass="KeyboardKey" customModule="KeyboardFramework">
-                                        <rect key="frame" x="128" y="89.5" width="40" height="39"/>
+                                        <rect key="frame" x="128" y="89" width="40" height="39"/>
                                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                         <userDefinedRuntimeAttributes>
                                             <userDefinedRuntimeAttribute type="string" keyPath="text" value="E"/>
@@ -49,7 +49,7 @@
                                         </userDefinedRuntimeAttributes>
                                     </view>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="prx-RI-X1c" userLabel="R" customClass="KeyboardKey" customModule="KeyboardFramework">
-                                        <rect key="frame" x="174" y="89.5" width="40" height="39"/>
+                                        <rect key="frame" x="174" y="89" width="40" height="39"/>
                                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                         <userDefinedRuntimeAttributes>
                                             <userDefinedRuntimeAttribute type="string" keyPath="text" value="R"/>
@@ -57,45 +57,45 @@
                                         </userDefinedRuntimeAttributes>
                                     </view>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Vox-n1-nil" userLabel="T" customClass="KeyboardKey" customModule="KeyboardFramework">
-                                        <rect key="frame" x="220" y="89.5" width="40" height="39"/>
+                                        <rect key="frame" x="220" y="89" width="40" height="39"/>
                                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                         <userDefinedRuntimeAttributes>
                                             <userDefinedRuntimeAttribute type="string" keyPath="text" value="T"/>
                                             <userDefinedRuntimeAttribute type="boolean" keyPath="highlighted" value="NO"/>
                                         </userDefinedRuntimeAttributes>
                                     </view>
-                                    <view hidden="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="YYS-Ki-gEw" userLabel="Spacer 1">
+                                    <view hidden="YES" contentMode="scaleToFill" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="YYS-Ki-gEw" userLabel="Spacer 1">
                                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                         <constraints>
                                             <constraint firstAttribute="width" priority="999" constant="5" id="a38-fR-LDZ"/>
                                             <constraint firstAttribute="height" id="mpR-Q3-jgP"/>
                                         </constraints>
                                     </view>
-                                    <view hidden="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="u7h-6W-HDG" userLabel="Spacer 2">
+                                    <view hidden="YES" contentMode="scaleToFill" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="u7h-6W-HDG" userLabel="Spacer 2">
                                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                     </view>
-                                    <view hidden="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="HRO-c9-vM0" userLabel="Spacer 3">
+                                    <view hidden="YES" contentMode="scaleToFill" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="HRO-c9-vM0" userLabel="Spacer 3">
                                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                     </view>
-                                    <view hidden="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="dan-pp-Dq3" userLabel="Spacer 4">
+                                    <view hidden="YES" contentMode="scaleToFill" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="dan-pp-Dq3" userLabel="Spacer 4">
                                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                     </view>
-                                    <view hidden="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="8F7-x3-up2" userLabel="Top Spacer">
+                                    <view hidden="YES" contentMode="scaleToFill" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="8F7-x3-up2" userLabel="Top Spacer">
                                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                         <constraints>
                                             <constraint firstAttribute="width" id="Yyd-bn-9pd"/>
                                         </constraints>
                                     </view>
-                                    <view hidden="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="wh6-5X-LAP" userLabel="Bottom Spacer">
+                                    <view hidden="YES" contentMode="scaleToFill" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="wh6-5X-LAP" userLabel="Bottom Spacer">
                                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                     </view>
-                                    <view hidden="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="2X0-lR-U6k" userLabel="Left Spacer">
+                                    <view hidden="YES" contentMode="scaleToFill" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="2X0-lR-U6k" userLabel="Left Spacer">
                                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                         <constraints>
                                             <constraint firstAttribute="height" id="oV2-yJ-Bfw"/>
                                         </constraints>
                                     </view>
-                                    <view hidden="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="7qL-Kq-eaF" userLabel="Right Spacer">
+                                    <view hidden="YES" contentMode="scaleToFill" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="7qL-Kq-eaF" userLabel="Right Spacer">
                                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                     </view>
                                 </subviews>
