--- a/Keyboard/DefaultSettings.xib
+++ b/Keyboard/DefaultSettings.xib
@@ -5,53 +5,64 @@
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <objects>
-        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
+        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="KeyboardViewController" customModule="Keyboard" customModuleProvider="target"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <view contentMode="scaleToFill" id="iN0-l3-epB">
-            <rect key="frame" x="0.0" y="0.0" width="539" height="372"/>
+        <view contentMode="scaleToFill" id="iN0-l3-epB" customClass="DefaultSettings" customModule="Keyboard" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="679" height="415"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" ambiguous="YES" translatesAutoresizingMaskIntoConstraints="NO" id="B5p-cA-JBF">
-                    <rect key="frame" x="0.0" y="0.0" width="539" height="372"/>
+                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Ibn-Pg-NVs">
+                    <rect key="frame" x="0.0" y="0.0" width="679" height="369"/>
                     <subviews>
                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Settings" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="YuR-yT-g8t">
-                            <rect key="frame" x="231" y="8" width="76" height="26"/>
+                            <rect key="frame" x="301" y="8" width="75.5" height="25.5"/>
                             <fontDescription key="fontDescription" type="system" pointSize="21"/>
                             <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                             <nil key="highlightedColor"/>
                         </label>
-                        <switch opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" on="YES" translatesAutoresizingMaskIntoConstraints="NO" id="6Sa-WX-6JD">
-                            <rect key="frame" x="245" y="42" width="51" height="31"/>
-                        </switch>
-                        <switch opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" on="YES" translatesAutoresizingMaskIntoConstraints="NO" id="I7U-L3-bHe">
-                            <rect key="frame" x="245" y="81" width="51" height="31"/>
-                        </switch>
-                        <switch opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" on="YES" translatesAutoresizingMaskIntoConstraints="NO" id="3rI-9b-Oil">
-                            <rect key="frame" x="245" y="120" width="51" height="31"/>
-                        </switch>
-                        <switch opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" on="YES" translatesAutoresizingMaskIntoConstraints="NO" id="g8L-0D-4gY">
-                            <rect key="frame" x="245" y="159" width="51" height="31"/>
-                        </switch>
+                        <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" style="plain" separatorStyle="default" allowsSelection="NO" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" translatesAutoresizingMaskIntoConstraints="NO" id="PIq-gg-rs6">
+                            <rect key="frame" x="0.0" y="41" width="679" height="327.5"/>
+                            <connections>
+                                <outlet property="dataSource" destination="iN0-l3-epB" id="QGI-Ha-4wk"/>
+                                <outlet property="delegate" destination="iN0-l3-epB" id="wMx-61-MqY"/>
+                            </connections>
+                        </tableView>
                     </subviews>
                     <constraints>
-                        <constraint firstItem="YuR-yT-g8t" firstAttribute="top" secondItem="B5p-cA-JBF" secondAttribute="topMargin" id="4KS-Zb-8Is"/>
-                        <constraint firstAttribute="trailing" secondItem="YuR-yT-g8t" secondAttribute="trailing" constant="232" id="O7I-Bo-rSn"/>
-                        <constraint firstItem="YuR-yT-g8t" firstAttribute="centerX" secondItem="B5p-cA-JBF" secondAttribute="centerX" id="lO2-hf-J4E"/>
+                        <constraint firstAttribute="centerX" secondItem="YuR-yT-g8t" secondAttribute="centerX" constant="0.75" id="0Jf-qL-ZSc"/>
+                        <constraint firstItem="YuR-yT-g8t" firstAttribute="top" secondItem="Ibn-Pg-NVs" secondAttribute="topMargin" id="4YN-nA-DAC"/>
+                        <constraint firstAttribute="bottom" secondItem="PIq-gg-rs6" secondAttribute="bottom" id="EIH-QE-G7s"/>
+                        <constraint firstAttribute="trailing" secondItem="PIq-gg-rs6" secondAttribute="trailing" id="JoT-Qt-6kS"/>
+                        <constraint firstItem="PIq-gg-rs6" firstAttribute="top" secondItem="YuR-yT-g8t" secondAttribute="bottom" constant="8" symbolic="YES" id="Vj8-cs-y2l"/>
+                        <constraint firstItem="PIq-gg-rs6" firstAttribute="leading" secondItem="Ibn-Pg-NVs" secondAttribute="leading" id="ol6-uh-Kgp"/>
                     </constraints>
-                </scrollView>
+                </view>
+                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="x35-jI-wEW">
+                    <rect key="frame" x="8" y="377" width="55" height="30"/>
+                    <state key="normal" title="〈 Back">
+                        <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                    </state>
+                    <connections>
+                        <action selector="toggleSettings" destination="-1" eventType="touchUpInside" id="eNw-hf-C9Q"/>
+                    </connections>
+                </button>
             </subviews>
-            <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
             <constraints>
-                <constraint firstAttribute="bottom" secondItem="B5p-cA-JBF" secondAttribute="bottom" id="Fdb-pi-5Do"/>
-                <constraint firstItem="B5p-cA-JBF" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" id="KKS-dT-v4r"/>
-                <constraint firstItem="B5p-cA-JBF" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" id="dHM-em-QAD"/>
-                <constraint firstAttribute="trailing" secondItem="B5p-cA-JBF" secondAttribute="trailing" id="obp-JH-p2e"/>
+                <constraint firstItem="Ibn-Pg-NVs" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" id="agc-9G-vb3"/>
+                <constraint firstItem="Ibn-Pg-NVs" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" id="kEG-1N-xFK"/>
+                <constraint firstItem="x35-jI-wEW" firstAttribute="top" secondItem="Ibn-Pg-NVs" secondAttribute="bottom" constant="8" symbolic="YES" id="p92-uh-8uj"/>
+                <constraint firstItem="x35-jI-wEW" firstAttribute="left" secondItem="iN0-l3-epB" secondAttribute="leftMargin" id="qWN-kC-qwh"/>
+                <constraint firstAttribute="bottomMargin" secondItem="x35-jI-wEW" secondAttribute="bottom" id="rcd-Mx-L8n"/>
+                <constraint firstAttribute="trailing" secondItem="Ibn-Pg-NVs" secondAttribute="trailing" id="ub2-6W-mUN"/>
             </constraints>
             <nil key="simulatedStatusBarMetrics"/>
             <nil key="simulatedTopBarMetrics"/>
             <nil key="simulatedBottomBarMetrics"/>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
-            <point key="canvasLocation" x="302.5" y="107"/>
+            <connections>
+                <outlet property="tableView" destination="PIq-gg-rs6" id="vFH-DP-jp0"/>
+            </connections>
+            <point key="canvasLocation" x="372.5" y="128.5"/>
         </view>
     </objects>
 </document>
