--- a/Keyboard/DefaultSettings.xib
+++ b/Keyboard/DefaultSettings.xib
@@ -1,8 +1,7 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="6250" systemVersion="14A389" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="6250" systemVersion="14A389" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6244"/>
-        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="KeyboardViewController" customModule="Keyboard" customModuleProvider="target"/>
@@ -11,17 +10,12 @@
             <rect key="frame" x="0.0" y="0.0" width="679" height="392"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Ibn-Pg-NVs">
-                    <rect key="frame" x="0.0" y="0.0" width="679" height="346"/>
+                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Ibn-Pg-NVs" userLabel="TableView">
+                    <rect key="frame" x="0.0" y="0.0" width="679" height="392"/>
                     <subviews>
-                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Settings" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="YuR-yT-g8t">
-                            <rect key="frame" x="301" y="8" width="75.5" height="25.5"/>
-                            <fontDescription key="fontDescription" type="system" pointSize="21"/>
-                            <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
-                            <nil key="highlightedColor"/>
-                        </label>
-                        <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" style="plain" separatorStyle="default" allowsSelection="NO" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" translatesAutoresizingMaskIntoConstraints="NO" id="PIq-gg-rs6">
-                            <rect key="frame" x="0.0" y="41" width="679" height="304.5"/>
+                        <tableView opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" indicatorStyle="black" style="grouped" separatorStyle="default" allowsSelection="NO" rowHeight="44" sectionHeaderHeight="10" sectionFooterHeight="10" translatesAutoresizingMaskIntoConstraints="NO" id="PIq-gg-rs6">
+                            <rect key="frame" x="0.0" y="0.0" width="679" height="391.5"/>
+                            <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                             <connections>
                                 <outlet property="dataSource" destination="iN0-l3-epB" id="QGI-Ha-4wk"/>
                                 <outlet property="delegate" destination="iN0-l3-epB" id="wMx-61-MqY"/>
@@ -29,30 +23,65 @@
                         </tableView>
                     </subviews>
                     <constraints>
-                        <constraint firstAttribute="centerX" secondItem="YuR-yT-g8t" secondAttribute="centerX" constant="0.75" id="0Jf-qL-ZSc"/>
-                        <constraint firstItem="YuR-yT-g8t" firstAttribute="top" secondItem="Ibn-Pg-NVs" secondAttribute="topMargin" id="4YN-nA-DAC"/>
+                        <constraint firstItem="PIq-gg-rs6" firstAttribute="top" secondItem="Ibn-Pg-NVs" secondAttribute="top" id="5T4-Et-0qD"/>
                         <constraint firstAttribute="bottom" secondItem="PIq-gg-rs6" secondAttribute="bottom" id="EIH-QE-G7s"/>
                         <constraint firstAttribute="trailing" secondItem="PIq-gg-rs6" secondAttribute="trailing" id="JoT-Qt-6kS"/>
-                        <constraint firstItem="PIq-gg-rs6" firstAttribute="top" secondItem="YuR-yT-g8t" secondAttribute="bottom" constant="8" symbolic="YES" id="Vj8-cs-y2l"/>
                         <constraint firstItem="PIq-gg-rs6" firstAttribute="leading" secondItem="Ibn-Pg-NVs" secondAttribute="leading" id="ol6-uh-Kgp"/>
                     </constraints>
                 </view>
-                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="x35-jI-wEW">
-                    <rect key="frame" x="8" y="354" width="55" height="30"/>
-                    <state key="normal" title="〈 Back">
-                        <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
-                    </state>
-                    <connections>
-                        <action selector="toggleSettings" destination="-1" eventType="touchUpInside" id="eNw-hf-C9Q"/>
-                    </connections>
-                </button>
+                <visualEffectView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="p1b-aL-nFG">
+                    <rect key="frame" x="0.0" y="352" width="679" height="40"/>
+                    <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="EjZ-Jw-9eM">
+                        <rect key="frame" x="0.0" y="0.0" width="679" height="40"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Settings" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="YuR-yT-g8t">
+                                <rect key="frame" x="301" y="7.5" width="75.5" height="25.5"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="21"/>
+                                <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="x35-jI-wEW">
+                                <rect key="frame" x="0.0" y="5" width="55" height="30"/>
+                                <state key="normal" title="〈 Back">
+                                    <color key="titleColor" red="0.0" green="0.47843137254901963" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <connections>
+                                    <action selector="toggleSettings" destination="-1" eventType="touchUpInside" id="eNw-hf-C9Q"/>
+                                </connections>
+                            </button>
+                            <view alpha="0.5" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ooR-t1-RO3">
+                                <rect key="frame" x="0.0" y="0.0" width="679" height="1"/>
+                                <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="1" id="8r2-39-dpi"/>
+                                </constraints>
+                            </view>
+                        </subviews>
+                        <constraints>
+                            <constraint firstAttribute="centerY" secondItem="x35-jI-wEW" secondAttribute="centerY" id="CWy-gZ-H4o"/>
+                            <constraint firstAttribute="trailing" secondItem="ooR-t1-RO3" secondAttribute="trailing" id="GSc-2I-KFc"/>
+                            <constraint firstItem="x35-jI-wEW" firstAttribute="leading" secondItem="EjZ-Jw-9eM" secondAttribute="leading" id="JnW-Dq-l8s"/>
+                            <constraint firstAttribute="centerX" secondItem="YuR-yT-g8t" secondAttribute="centerX" id="LCD-5y-VTJ"/>
+                            <constraint firstItem="ooR-t1-RO3" firstAttribute="leading" secondItem="EjZ-Jw-9eM" secondAttribute="leading" id="O6G-ec-UA4"/>
+                            <constraint firstAttribute="centerY" secondItem="YuR-yT-g8t" secondAttribute="centerY" id="UL6-HN-Y6O"/>
+                            <constraint firstItem="ooR-t1-RO3" firstAttribute="top" secondItem="EjZ-Jw-9eM" secondAttribute="top" id="twN-4I-7ty"/>
+                        </constraints>
+                    </view>
+                    <constraints>
+                        <constraint firstAttribute="height" constant="40" id="H9o-bF-IGn"/>
+                    </constraints>
+                    <blurEffect style="light"/>
+                </visualEffectView>
             </subviews>
             <constraints>
+                <constraint firstItem="p1b-aL-nFG" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" id="Bgl-Q1-iWr"/>
+                <constraint firstAttribute="trailing" secondItem="p1b-aL-nFG" secondAttribute="trailing" id="TNA-r8-0aj"/>
                 <constraint firstItem="Ibn-Pg-NVs" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" id="agc-9G-vb3"/>
                 <constraint firstItem="Ibn-Pg-NVs" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" id="kEG-1N-xFK"/>
-                <constraint firstItem="x35-jI-wEW" firstAttribute="top" secondItem="Ibn-Pg-NVs" secondAttribute="bottom" constant="8" symbolic="YES" id="p92-uh-8uj"/>
-                <constraint firstItem="x35-jI-wEW" firstAttribute="left" secondItem="iN0-l3-epB" secondAttribute="leftMargin" id="qWN-kC-qwh"/>
-                <constraint firstAttribute="bottomMargin" secondItem="x35-jI-wEW" secondAttribute="bottom" id="rcd-Mx-L8n"/>
+                <constraint firstAttribute="bottom" secondItem="Ibn-Pg-NVs" secondAttribute="bottom" id="mai-mV-le9"/>
+                <constraint firstAttribute="bottom" secondItem="p1b-aL-nFG" secondAttribute="bottom" id="tK7-Pg-Lkx"/>
                 <constraint firstAttribute="trailing" secondItem="Ibn-Pg-NVs" secondAttribute="trailing" id="ub2-6W-mUN"/>
             </constraints>
             <nil key="simulatedStatusBarMetrics"/>
@@ -60,9 +89,17 @@
             <nil key="simulatedBottomBarMetrics"/>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
             <connections>
+                <outlet property="backButton" destination="x35-jI-wEW" id="olh-vc-HPI"/>
+                <outlet property="effectsView" destination="p1b-aL-nFG" id="Urb-ow-ENT"/>
+                <outlet property="settingsLabel" destination="YuR-yT-g8t" id="bzf-AH-00o"/>
                 <outlet property="tableView" destination="PIq-gg-rs6" id="vFH-DP-jp0"/>
             </connections>
             <point key="canvasLocation" x="372.5" y="117"/>
         </view>
     </objects>
+    <simulatedMetricsContainer key="defaultSimulatedMetrics">
+        <simulatedStatusBarMetrics key="statusBar"/>
+        <simulatedOrientationMetrics key="orientation"/>
+        <simulatedScreenMetrics key="destination" type="retina4"/>
+    </simulatedMetricsContainer>
 </document>
